# botox

./: CMakeLists.txt  README.md  args_parser.h  main.cpp
botox/: botox.cpp  botox.h  pixel.h
botox/weights/: default_pixel_weight_calculator.h  pixel_weight_calculator.h
